--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
@@ -29,35 +28,35 @@
         <div class="container"><img class="img-fluid d-block mx-auto mb-5" data-aos="fade-left" data-aos-duration="1550" src="assets/img/profile.png" style="border-radius: 204px;border-top-left-radius: 204px;max-width: 50%;">
             <h1 data-aos="fade-right" data-aos-duration="1150">Elias Slim</h1>
             <hr class="star-light">
-            <h2 data-aos="fade" data-aos-duration="1050" class="font-weight-light mb-0">Web &amp; Mobile Developer - UI/UX Designer - AI &amp; Machine Learning</h2>
+            <h2 data-aos="fade" data-aos-duration="1050" class="font-weight-light mb-0">Web &amp; Mobile Developer - UI/UX Designer - AI &amp; ML</h2>
         </div>
     </header>
     <section id="portfolio" class="portfolio">
         <div class="container" data-aos="slide-up" data-aos-duration="1250">
             <h2 class="text-uppercase text-center text-secondary">CORE SKILLS</h2>
-            <hr class="star-dark mb-5">
-            <div class="row">
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-bs-toggle="modal">
-                        <div class="d-flex portfolio-item-caption position-absolute h-100 w-100" data-bss-hover-animate="bounce" style="padding: 25px;"></div><img class="img-fluid" src="assets/img/portfolio/js.png" style="padding: 25px;">
-                    </a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-bs-toggle="modal">
-                        <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
-                            <div class="text-center text-white my-auto portfolio-item-caption-content w-100"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/html-5%20(1).png" style="width: 391px;padding: 25px;">
-                    </a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-bs-toggle="modal">
-                        <div class="d-flex portfolio-item-caption position-absolute h-100 w-100" style="padding: 25px;">
-                            <div class="text-center text-white my-auto portfolio-item-caption-content w-100"></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/python.png">
-                    </a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-bs-toggle="modal">
-                        <div class="d-flex portfolio-item-caption position-absolute h-100 w-100" style="padding: 25px;">
-                            <div class="text-center text-white my-auto portfolio-item-caption-content w-100"><i class="fa fa-search-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/react.png" style="padding: 25px;">
-                    </a></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal"></a><img class="img-fluid" src="assets/img/portfolio/logo-vertical%20(1).png" style="padding: 25px;"></div>
-                <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal"></a><img class="img-fluid" src="assets/img/portfolio/angular_mahirkoding.jpeg" style="padding: 25px;"></div>
-            </div>
+            <hr class="star-dark mb-5"><div class="row">
+    <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-1" data-bs-toggle="modal">
+            <div class="d-flex portfolio-item-caption position-absolute h-100 w-100" style="padding: 25px;"></div><img class="img-fluid" src="assets/img/portfolio/js.png" style="padding: 25px;" />
+        </a></div>
+    <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-2" data-bs-toggle="modal">
+            <div class="d-flex portfolio-item-caption position-absolute h-100 w-100">
+                <div class="text-center text-white my-auto portfolio-item-caption-content w-100"><i class="fa fa-search-plus fa-3x"></i></div>
+            </div><img class="img-fluid" src="assets/img/portfolio/html-5%20(1).png" style="width: 391px;padding: 25px;" />
+        </a></div>
+    <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-3" data-bs-toggle="modal">
+            <div class="d-flex portfolio-item-caption position-absolute h-100 w-100" style="padding: 25px;">
+                <div class="text-center text-white my-auto portfolio-item-caption-content w-100"></div>
+            </div><img class="img-fluid" src="assets/img/portfolio/python.png" />
+        </a></div>
+    <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-4" data-bs-toggle="modal">
+            <div class="d-flex portfolio-item-caption position-absolute h-100 w-100" style="padding: 25px;">
+                <div class="text-center text-white my-auto portfolio-item-caption-content w-100"><i class="fa fa-search-plus fa-3x"></i></div>
+            </div><img class="img-fluid" src="assets/img/portfolio/react.png" style="padding: 25px;" />
+        </a></div>
+    <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal"></a><img class="img-fluid" src="assets/img/portfolio/logo-vertical%20(1).png" style="padding: 25px;" /></div>
+    <div class="col-md-6 col-lg-4"><a class="d-block mx-auto portfolio-item" href="#portfolio-modal-5" data-bs-toggle="modal"></a><img class="img-fluid" src="assets/img/portfolio/angular_mahirkoding.jpeg" style="padding: 25px;" /></div>
+    <div class="w-100"></div>
+</div>
         </div>
     </section>
     <section class="text-white bg-primary mb-0" id="about">
@@ -241,7 +240,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/freelancer.js"></script>
