--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
@@ -28,7 +28,7 @@
         <div class="container"><img class="img-fluid d-block mx-auto mb-5" data-aos="fade-left" data-aos-duration="1550" src="assets/img/profile.png" style="border-radius: 204px;border-top-left-radius: 204px;max-width: 50%;">
             <h1 data-aos="fade-right" data-aos-duration="1150">Elias Slim</h1>
             <hr class="star-light">
-            <h2 data-aos="fade" data-aos-duration="1050" class="font-weight-light mb-0">Web &amp; Mobile Developer - UI/UX Designer - AI &amp; ML</h2>
+            <h2 data-aos="fade" data-aos-duration="1050" class="font-weight-light mb-0">Web &amp; Mobile Developer&nbsp;<br>&nbsp;UI/UX Designer <br>AI &amp; ML</h2>
         </div>
     </header>
     <section id="portfolio" class="portfolio">
@@ -240,7 +240,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/freelancer.js"></script>
